# qcorotwic

./: .gitignore  .gitmodules  CMakeLists.txt
.reuse/: dep5
qcorotwic/: CMakeLists.txt  api.cpp  api.h  authmanager.cpp  authmanager.h  main.cpp  secrets.h
qcorotwic/qml/: main.qml
qcorotwic/utils/: literals.h
